// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup> that renders a button should add classes when props are changed 1`] = `
<ButtonGroup
  isBlock={true}
  isInline={false}
  size="large"
>
  <div
    className="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <Button
      className="ButtonGroup__button ButtonGroup__button--isBlock"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".0"
      size="large"
      type="button"
    >
      <button
        className="Button Button--context_neutral Button--size_large ButtonGroup__button ButtonGroup__button--isBlock"
        disabled={false}
        type="button"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button ButtonGroup__button--isBlock"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".1"
      size="large"
      type="button"
    >
      <button
        className="Button Button--context_neutral Button--size_large ButtonGroup__button ButtonGroup__button--isBlock"
        disabled={false}
        type="button"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup> that renders a button should render default button correctly 1`] = `
<ButtonGroup
  isBlock={false}
  isInline={false}
  size="normal"
>
  <div
    className="ButtonGroup"
    role="group"
  >
    <Button
      className="ButtonGroup__button"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".0"
      size="normal"
      type="button"
    >
      <button
        className="Button Button--context_neutral ButtonGroup__button"
        disabled={false}
        type="button"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".1"
      size="normal"
      type="button"
    >
      <button
        className="Button Button--context_neutral ButtonGroup__button"
        disabled={false}
        type="button"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;
